# scova

./: .gitignore  README.md  pyproject.toml  scova_methodology_plan.md
benchmarks/: .cf-external-r4-eight-cell.json  __init__.py  aggregate_cf_campaign.py  calibrate_stage3_gates.py  cf_external_agreement.py  cf_external_validation.py  cf_inference_campaign.py  cf_reference_campaign.py  jax_gradient_matrix.py  requirements-cf-validation.txt  stage2_fwer.py  stage3_campaign.py  stage3_memory.py  stage3_path.py  stage4_campaign.py  stage5b_campaign.py  stage5b_promotion_campaign.py  summarize_stage3.py  summarize_stage4.py  verify_cf_smoke.py
docs/: cf_reference_v2_blocking_report.md  cf_reference_v5_inference_blocking_report.md  cf_reference_v6_inference_gate_erratum.md  cf_reference_validation.md  estimated_tilt_eif.md  scova_cf.md  scova_cf_reference_runbook.md  scova_cf_v4_reference_runbook.md  scova_cf_v5_reference_runbook.md  scova_cf_v6_inference_runbook.md  scova_cf_v7_recalibration_runbook.md  stage3_directional_runbook.md  stage3_positioning.md  stage3_stabilization.md  stage4_campaign_runbook.md  stage4_statistical_api_contract.md  stage5b_promotion_audit.md  statistical_contract.md
examples/: counterfactual_means.py  outer_split_graph.py  overlap_path.py  pairwise_without_kway.py  scova_cf_nonlinear_benefit.py  simulated_nonlinear_overlap.py  simulated_program_tracks.py  simulated_support_failure.py  stage5b_lipschitz_anchor.py  three_group.py
release/: stage3_promotion.json  stage5b_promotion_audit.json
scripts/: __init__.py  audit_cf_pilot.py  calibrate_cf_support.py  check_cf_campaign_prerequisites.py  check_cf_reference_release.py  check_critical_coverage.py  check_stage3_release.py  (+16 more)
(+103 files in other folders)
