[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "scova"
version = "0.3.0.dev0"
description = "Support-aware Covariate Overlap and Variance Analysis"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "SCOVA contributors" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
jax = ["jax>=0.4"]
cf-validation = [
  "doubleml>=0.10",
  "econml>=0.16",
]
dev = [
  "build>=1.2",
  "coverage[toml]>=7.5",
  "hypothesis>=6.100",
  "mypy>=1.10",
  "pandas-stubs>=2.0",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/scova"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["scova"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 92

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["scova"]
warn_unreachable = true
no_site_packages = true

[[tool.mypy.overrides]]
module = ["jax", "jax.*", "numpy", "numpy.*", "pandas", "pandas.*", "scipy", "scipy.*", "sklearn", "sklearn.*"]
follow_imports = "skip"
ignore_missing_imports = true
